<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adb_dialog_title"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:textColor="@color/purple_700"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginHorizontal="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipTextBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/adb_port_text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:id="@+id/pairingCodeTextBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/adb_pairing_text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white"
            app:rippleColor="@color/lightGray"
            app:cornerRadius="13dp"
            android:text="@string/connect_text"
            android:textColor="@color/purple_700"
            style="@style/Widget.MaterialComponents.Button"
            android:stateListAnimator="@null"
            android:elevation="0dp"
            android:layout_margin="16dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white"
            app:rippleColor="@color/lightGray"
            app:cornerRadius="13dp"
            android:text="@string/cancel_text"
            android:textColor="@color/purple_700"
            style="@style/Widget.MaterialComponents.Button"
            android:stateListAnimator="@null"
            android:elevation="0dp"
            android:layout_marginVertical="16dp"/>
    </LinearLayout>
</LinearLayout>