<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.Py2niumApp"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="#000000"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/settingBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/white"
                app:rippleColor="@color/gray"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="0dp"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/setting_icon"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"
                app:strokeColor="@color/gray"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp">
                <io.py2nium.server.gui.components.CardInfoItem
                    android:id="@+id/serverStatusCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    app:icon="@drawable/stopped_icon"
                    app:iconBackgroundColor="@color/lightRed"
                    app:mainText="@string/server_stopped_status"
                    app:subText="@string/running_instrument"
                    android:clickable="true"
                    android:focusable="true"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"
                app:strokeColor="@color/gray"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <io.py2nium.server.gui.components.CardInfoItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        app:icon="@drawable/android_icon"
                        app:iconBackgroundColor="@color/lightGreen"
                        app:iconSize="30dp"
                        app:mainText="@string/adb_method_title"
                        app:subText="@string/adb_method_description"
                        android:layout_marginBottom="5dp"/>

                    <io.py2nium.server.gui.components.CardInfoItem
                        android:id="@+id/adbConnectBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="5dp"
                        android:layout_marginBottom="15dp"
                        app:icon="@drawable/start_icon"
                        app:iconSize="30dp"
                        app:mainText="@string/start_text"
                        app:mainTextColor="@color/purple_700"
                        app:onClick_backgroundColor="@color/gray"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"
                app:strokeColor="@color/gray"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <io.py2nium.server.gui.components.CardInfoItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        app:icon="@drawable/superuser_icon"
                        app:iconBackgroundColor="@color/lightGreen"
                        app:iconSize="30dp"
                        app:mainText="@string/root_method_title"
                        app:subText="@string/root_method_description"
                        android:layout_marginBottom="5dp"/>
                    <io.py2nium.server.gui.components.CardInfoItem
                        android:id="@+id/rootConnectBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="5dp"
                        android:layout_marginBottom="10dp"
                        app:icon="@drawable/start_icon"
                        app:iconSize="30dp"
                        app:mainText="@string/start_text"
                        app:mainTextColor="@color/purple_700"
                        app:onClick_backgroundColor="@color/gray"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"
                android:layout_marginBottom="20dp"
                app:strokeColor="@color/gray"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <io.py2nium.server.gui.components.CardInfoItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        app:icon="@drawable/info_icon"
                        app:iconBackgroundColor="@color/lightYellow"
                        app:iconSize="30dp"
                        app:mainText="@string/information_title"
                        app:subText="@string/information_description"
                        android:layout_marginBottom="5dp"/>
                    <io.py2nium.server.gui.components.CardInfoItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="15dp"
                        app:icon="@drawable/author_icon"
                        app:iconSize="30dp"
                        app:mainText="@string/github_author"/>
                    <io.py2nium.server.gui.components.CardInfoItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="15dp"
                        app:icon="@drawable/version_icon"
                        app:iconSize="30dp"
                        app:mainText="@string/app_version"/>
                    <io.py2nium.server.gui.components.CardInfoItem
                        android:id="@+id/projectLinkTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="15dp"
                        android:layout_marginBottom="10dp"
                        app:icon="@drawable/github_icon"
                        app:iconSize="30dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>