<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.SettingsActivity">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/left_arrow_icon" />
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting_title"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/saveBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/save_icon" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/darkWhite"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/server_port_text"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="26sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/server_port_description"
                        android:textSize="20sp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/serverPort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/server_port_hint"
                            android:textSize="20sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/darkWhite"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adb_default_port_text"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="26sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/adb_default_port_description"
                        android:textSize="20sp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/adbDefaultPort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:hint="@string/adb_default_port_text"
                            android:textSize="20sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/darkWhite"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/su_path_text"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="26sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/su_path_description"
                        android:textSize="20sp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/suPath"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/su_path_hint"
                            android:textSize="20sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/darkWhite"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_on_boot_text"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="26sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/start_on_boot_description"
                        android:textSize="20sp" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_on_boot_enable"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/startOnBootSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleX="1.2"
                            android:scaleY="1.2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>